fixed things that i fucked in last commit

--- a/srv/static/templates/base.html
+++ b/srv/static/templates/base.html
@@ -1,19 +1,21 @@
 
 
-<DOCTYPE html>
+
+
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-    {% block head %}
-        
-    {% endblock %}
-</head>
-<body>
-    {{version}}
-    {% block content %}{% endblock %}
-    {% block js %}
-        
-    {% endblock %}
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>{% block title %}{% endblock %}</title>
+        {% block head %}
+            
+        {% endblock %}
+    </head>
+    <body>
+        {{version}}
+        {% block content %}{% endblock %}
+        {% block js %}
+            
+        {% endblock %}
+    </body>
 </html>
