--- a/srv/static/templates/home.html
+++ b/srv/static/templates/home.html
@@ -4,5 +4,11 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-   Home 
+
+    <div class="main-block">block 0</div>
+    <div class="main-block" style="background-color: grey;">block 2</div>
+    <div class="main-block">block 3</div>
+    <div class="main-block" style="background-color: grey;">block 4</div>
+    <div class="main-block">block 5</div>
+
 {% endblock %}
