--- a/srv/static/templates/base.html
+++ b/srv/static/templates/base.html
@@ -16,7 +16,7 @@
 
     </head>
 
-    <body>
+    <body class="flex-vert">
         <header class="flex-horz flex-between">
             <img class="header-img" src="static/assets/imgs/logo-dark-2x1.png"> 
 
