--- a/srv/static/templates/base.html
+++ b/srv/static/templates/base.html
@@ -19,13 +19,21 @@
     <body class="flex-vert">
         <header class="flex-horz flex-between">
             <img class="header-img" src="static/assets/imgs/logo-dark-2x1.png"> 
+            <nav>
 
-            <ul class="flex-horz flex-around">
-                <li class="li-no-dot"><a href="/home" class="no-decoration">Home</a></li>
-                <li class="li-no-dot"><a href="/verhuur" class="no-decoration">Verhuur</a></li>
-                <li class="li-no-dot"><a href="/contact" class="no-decoration">Contact</a></li>
-            </ul>
+                <ul class="flex-horz flex-around">
+                    <li class="li-no-dot">
+                        <a href="/home" class="no-decoration nav-item">Home</a>
+                    </li>
+                    <li class="li-no-dot">
+                        <a href="/verhuur" class="no-decoration nav-item">verhuur</a>
+                    </li>
+                    <li class="li-no-dot">
+                        <a href="/contact" class="no-decoration nav-item">contact</a>
+                    </li>
+                </ul>
 
+            </nav>
         </header>
 
         <main>
